--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,9 @@ body {
     line-height: 1.6;
 }
 
-ol, ul, li {
+ol,
+ul,
+li {
     list-style: none;
 }
 
@@ -24,16 +26,21 @@ a {
 }
 
 /* ------------------------------ Seção Menu -------------------------------*/
+
 .cabecalho {
+    width: 1136px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
     background-color: var(--cor-de-fundo-menu);
+    margin: auto;
 }
 
 .cabecalho__logo {
-    max-width: 80px; /* Ajuste para telas pequenas */
+    max-width: 80px;
+    margin-right: 5px;
+    /* Ajuste para telas pequenas */
 }
 
 .cabecalho__titulo {
@@ -48,8 +55,22 @@ a {
 .navegacao__elemento a {
     font-size: 0.9rem;
 }
-/* ------------------------------ Seção Apresentação ------------------------------*/
 
+/* ------------------------------ Seção Apresentação ------------------------------*/
+.apresentacao{
+    width: 1136px;
+    height: 368px;
+    display: flex;
+    flex-direction: row-reverse;
+    gap:32px;
+    margin: auto;
+    margin-top: 32px;
+}
+
+.apresentacao__foto{
+    border-radius: 500px;
+    border: 1px solid rgb(192, 183, 183);
+}
 
 /* ------------------------------ Seção Sobre mim ----------------------------------*/
 
@@ -98,6 +119,7 @@ a {
 
 /* Telas grandes */
 @media (min-width: 1024px) {
+
     /* Aqui você pode ajustar ainda mais o design para telas grandes */
     .cabecalho__titulo {
         font-size: 1.8rem;
