--- a/css/style.css
+++ b/css/style.css
@@ -57,26 +57,92 @@ a {
 }
 
 /* ------------------------------ Seção Apresentação ------------------------------*/
-.apresentacao{
+.apresentacao {
     width: 1136px;
     height: 368px;
     display: flex;
     flex-direction: row-reverse;
-    gap:32px;
+    gap: 32px;
     margin: auto;
     margin-top: 32px;
 }
 
-.apresentacao__foto{
+.apresentacao__foto {
     border-radius: 500px;
     border: 1px solid rgb(192, 183, 183);
 }
 
-/* ------------------------------ Seção Sobre mim ----------------------------------*/
+.redes {
+    display: flex;
+    gap: 15px;
+    margin-top: 30px;
+}
 
+/* ------------------------------ Seção Sobre mim ----------------------------------*/
+.sobre-mim {
+    width: 1136px;
+    height: 255px;
+    display: flex;
+    width: 1136px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    margin: auto;
+}
+
+.sobre-mim__titulo {
+    margin-top: -10px;
+}
+
+.sobre-mim__texto {
+    width: 751px;
+}
 
 /*------------------------------ Seção de Habilidades ------------------------------*/
+.habilidades {
+    width: 1136px;
+    height: 244px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    margin-top: 150px;
+}
 
+.habilidades__lista {
+    display: flex;
+}
+
+.habilidades__elemento {
+    display: flex;
+    width: 176px;
+    height: 174px;
+    padding: 16px;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 8px;
+}
+
+.habilidades__icone {
+    color: #2A7AE4;
+    text-align: center;
+    font-family: "Font Awesome 5 Brands";
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.habilidades__nome {
+    align-self: stretch;
+    color: var(--preto-100, #464646);
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
 
 /*------------------------------ Seção de Hobbies --------------------------------*/
 
